[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/graphics/barrier_turret1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy2_Sentinel.gd" type="Script" id=2]
[ext_resource path="res://scenes/TeslaBeam.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/animations/new_space_mines/spark_04.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/new_space_mines/spark_01.png" type="Texture" id=5]
[ext_resource path="res://assets/animations/new_space_mines/spark_03.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/new_space_mines/spark_02.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "sparky",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[node name="Enemy2_Sentinel" type="KinematicBody2D" groups=["Enemy"]]
modulate = Color( 0.384314, 0.960784, 0.0235294, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WaitTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.00001, 1.19209e-05 )
scale = Vector2( 15.3, 17.8 )

[node name="HadStopTimer" type="Timer" parent="."]

[node name="TeslaBeam" parent="." instance=ExtResource( 3 )]
rotation = 1.5708
scale = Vector2( 5, 1 )

[node name="StruckByLightningTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Anim_sparky" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.776471, 0.952941, 0.0431373, 1 )
scale = Vector2( 0.24, 0.24 )
frames = SubResource( 2 )
animation = "sparky"
frame = 2

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="BulletsDetector" type="Area2D" parent="."]

[node name="BulletCollisionShape2D" type="CollisionShape2D" parent="BulletsDetector"]
shape = SubResource( 3 )

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="HadStopTimer" to="." method="_on_HadStopTimer_timeout"]
[connection signal="timeout" from="StruckByLightningTimer" to="." method="_on_StruckByLightningTimer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
[connection signal="area_entered" from="BulletsDetector" to="." method="_on_BulletsDetector_area_entered"]
